# matasano-crypto-challenges

./: .gitignore  1-1-base64.cpp  1-2-fixed-xor.cpp  1-3-single-byte-xor.cpp  1-4-detect-single-byte-xor.cpp  1-5-repeating-key-xor.cpp  1-6-break-repeating-key-xor.cpp  1-7-aes-in-ecb-mode.cpp  1-8-detect-aes-in-ecb-mode.cpp  2-10-cbc-mode.cpp  2-9-pkcs7-padding.cpp  CMakeLists.txt  README.md  buffer.h  crypto.h  hamming-distance-test.cpp  letters.h  matasano.h
